# mlfe

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
apps/simpledb_mnist/: CMakeLists.txt  simpledb_mnist.cc  simpledb_mnist.cpp
apps/tensor_blob_example/: CMakeLists.txt  tensor_example.cpp
apps/train_examples/: CMakeLists.txt  common.hpp  item_holder.hpp  lenet_mnist.hpp  main.cpp  net_builder.cpp  net_builder.hpp  operator_factory.cpp  operator_factory.hpp  simple_mnist.hpp
example/cifar_v2/: CMakeLists.txt  main.cc  net_models.h
example/cifar_v2/dataset/: cifar.cc
example/mnist_v2/: CMakeLists.txt  auto_encoder.h  conv_net.h  main.cc  simple_net.h
example/mnist_v2/dataset/: mnist.cc  mnist.h
mlfe/: CMakeLists.txt  core.h  operators.h  optimizers.h
mlfe/core/: CMakeLists.txt  attribute.cc  attribute.h  device.cc  device.h  device_cpu.cc  device_cuda.cc  evaluator.cc  evaluator.h  gradient_helper.cc  gradient_helper.h  graph.cc  graph.h  item_holder.hpp  node.cc  node.h  op.h  op_algo.cc  op_algo.h  op_dep.cc  op_dep.h  op_design.cc  op_design.h  op_kernel.h  op_registry.cc  op_registry.h  param_def.hpp  registry.h  registry.hpp  task.h  tensor.cc  tensor.h  tensor_blob.h  tensor_blob.hpp  tensor_mem_ref.cc  tensor_mem_ref.h  tuple_iter.h  variable.cc  variable.h
mlfe/device_context/: CMakeLists.txt  context.cc  context.cpp  context.h  context.hpp  cpu_context.cc  cpu_context.cpp  cpu_context.h  cpu_context.hpp  cuda_context.cc  cuda_context.cpp  cuda_context.h  cuda_context.hpp
mlfe/flatbuffers/: tensor_blob_fb.fbs
mlfe/math/: CMakeLists.txt  activations.cc  activations.cu  activations.h  basic_functions.cc  basic_functions.cu  basic_functions.h  blas.cc  blas.cu  blas.h  blas.hpp  blas_cpu.cc  blas_cpu.cpp  blas_cuda.cu  functions.hpp  functions_cpu.cc  functions_cpu.cpp  functions_cuda.cu  functions_cuda.hpp  optimizers.cc  optimizers.cu  optimizers.h  transform.cc  transform.cpp  transform.h  transform.hpp  transform_cuda.cu
mlfe/module/: CMakeLists.txt  data_gen.h  model.cc  model.h  module.h
mlfe/module/callbacks/: callback.cc  callback.h  reduce_lr.cc  reduce_lr.h  tensorboard.cc  tensorboard.h
mlfe/module/layers/: batch_norm.cc  batch_norm.h  conv2d.cc  conv2d.h  dense.cc  dense.h  dropout.cc  dropout.h  flatten.cc  flatten.h  input.cc  input.h  layer.cc  layer.h  maxpool2d.cc  maxpool2d.h  relu.cc  relu.h  sigmoid.cc  sigmoid.h
mlfe/nn/: CMakeLists.txt  module.h
mlfe/nn/layers/: batch_norm.cc  batch_norm.h  conv2d.cc  conv2d.h  layer.cc  layer.h  linear.cc  linear.h
mlfe/nn/sequences/: batch_norm.h  conv2d.h  flatten.h  linear.h  maxpool2d.h  relu.h  sequence.h
mlfe/operators/: CMakeLists.txt  accuracy.cc  accuracy.cpp  accuracy.h  activations.cc  activations.h  activations_f_cpu.cc  activations_f_cuda.cc  activations_f_cudnn.cc  activations_f_mkl.cc  activations_f_xnnpack.cc  basic_arithmetic.cc  basic_arithmetics.cc  basic_arithmetics.h  basic_arithmetics_f_cpu.cc  basic_arithmetics_f_cuda.cc  batch_norm.cc  batch_norm.h  batch_norm1d.cc  batch_norm2d.cc  batch_norm_f_cpu.cc  batch_norm_f_cudnn.cc  broadcast.cc  broadcasting.cc  broadcasting.h  broadcasting_f_cpu.cc  broadcasting_f_cuda.cc  cast.hpp  cast_cpu.cpp  cast_op.hpp  conv2d.cc  convolution.cc  convolution.h  convolution.hpp  convolution_eigen.cpp  convolution_eigen.hpp  convolution_f_cpu.cc  convolution_f_cuda.cc  convolution_f_cudnn.cc  convolution_f_mkl.cc  (+92 more)
mlfe/operators_v2/: CMakeLists.txt  basic_arithmetic.cc  basic_arithmetic.h  batch_norm.cc  batch_norm.h  batch_norm1d.cc  batch_norm1d.h  batch_norm2d.cc  batch_norm2d.h  broadcast.cc  broadcast.h  conv2d.cc  conv2d.h  dropout.cc  dropout.h  global_avg_pool2d.cc  global_avg_pool2d.h  matmul.cc  matmul.h  maxpool2d.cc  maxpool2d.h  reduce_mean.cc  reduce_mean.h  relu.cc  relu.h  sigmoid.cc  sigmoid.h  sigmoid_cross_entropy.cc  sigmoid_cross_entropy.h  softmax_cross_entropy.cc  softmax_cross_entropy.h  squared_difference.cc  squared_difference.h  utils.cc  utils.h
mlfe/optimizers/: CMakeLists.txt  adadelta.cc  adadelta.h  adadelta_f_cpu.cc  adadelta_f_cuda.cc  adam.cc  adam.h  adam_f_cpu.cc  adam_f_cuda.cc  gradient_descent.cc  gradient_descent.h  gradient_descent_cpu.cc  gradient_descent_cuda.cc  gradient_descent_gpu.cc  optimizer.cc  optimizer.h  sgd.cc  sgd.h
mlfe/optimizers_v2/: CMakeLists.txt  adadelta.cc  adadelta.h  adam.cc  adam.h  sgd.cc  sgd.h
mlfe/unsupported/: CMakeLists.txt
mlfe/unsupported/core/: CMakeLists.txt  graph.cpp  graph.hpp  node.cpp  node.hpp  tensor.cpp  tensor.hpp  workspace.cpp  workspace.hpp
mlfe/unsupported/nodes/: CMakeLists.txt  accuracy.cpp  accuracy.hpp  accuracy_f_cpu.cpp  accuracy_f_cuda.cpp  activations.cpp  activations.hpp  activations_f_cpu.cpp  activations_f_cuda.cpp  activations_f_cudnn.cpp  convolution.cpp  convolution.hpp  convolution_f_cpu.cpp  convolution_f_cuda.cpp  dense.cpp  (+37 more)
mlfe/utils/: CMakeLists.txt  assert.h  crc.cc  crc.h  file_io.h  file_io.hpp  gradient_checker.h  gradient_checker.hpp  handy.cc  handy.h  string_parser.cc  string_parser.h  templates.h  thread_pool.h  thread_pool.hpp  type_holder.h  types.cc  types.cpp  types.h
unit_test/: CMakeLists.txt  autodiff_test.cc  binary_op_test.cc  graph_test.cc  main.cpp  registry_test.cc  tensor_test.cc  test_conv.hpp  test_conv_op.hpp  test_fc.hpp  test_fc_operator.hpp  test_max_pool.cpp  test_max_pool.hpp  test_simpledb.cpp  test_softmax_xent.cpp  test_softmax_xent.hpp  unary_op_test.cc
unit_test/core/: autograd.cc
unit_test/core_v2/: autograd.cc
unit_test/operators/: basic_arithmetic.cc  boardcast.cc  conv2d.cc  matmul.cc  maxpool2d.cc  reduce_mean.cc  relu.cc  sigmoid.cc  softmax_xent.cc  squared_difference.cc
unit_test/operators_v2/: basic_arithmetic.cc  boardcast.cc  conv2d.cc  matmul.cc  maxpool2d.cc  reduce_mean.cc  relu.cc  sigmoid.cc  softmax_xent.cc  squared_difference.cc
unit_test/test_fc_operator/: CMakeLists.txt  test_fc_operator.cpp
unit_test/test_simpledb/: CMakeLists.txt  test_simpledb.cpp
unit_test/test_softmax_xent/: CMakeLists.txt  test_softmax_xent.cpp
(+207 files in other folders)
