if(BUILD_TEST)
    set(the_app unit_test)
    file(GLOB test_srcs "*.cpp")
    file(GLOB test_hdrs "*.hpp")
    include_directories(${mlfe_include_dirs})
    add_executable(${the_app} ${test_srcs} ${test_hdrs})
    target_link_libraries(${the_app} ${mlfe_executable_linker_flags} mlfe gtest_main)
    set_target_properties(${the_app} PROPERTIES FOLDER "unit_test")
endif()
