if(BUILD_TEST)
    set(the_app unit_test)
    file(GLOB test_srcs "*.cc")
    file(GLOB test_hdrs "*.h")
    include_directories(${mlfe_include_dirs})
    add_executable(${the_app} ${test_srcs} ${test_hdrs})
    if(MSVC)
      target_link_libraries(${the_app} mlfe gtest_main)
      set_target_properties(${the_app} PROPERTIES LINK_FLAGS_DEBUG "/WHOLEARCHIVE:mlfed")
      set_target_properties(${the_app} PROPERTIES LINK_FLAGS_RELEASE "/WHOLEARCHIVE:mlfe")
    elseif(UNIX AND NOT APPLE)
      target_link_libraries(${the_app} -Wl,--whole-archive mlfe -Wl,--no-whole-archive gtest_main)
    elseif(APPLE)
      target_link_libraries(${the_app} -Wl,-force_load mlfe gtest_main)
    else()
      message("No support platform.")
    endif()
    set_target_properties(${the_app} PROPERTIES FOLDER "unit_test")
endif()
