set(the_app simpledb_mnist)
include_directories(${mlfe_include_dirs})
add_executable(${the_app} simpledb_mnist.cpp)
if(MSVC)
  target_link_libraries(${the_app} mlfe)
  set_target_properties(${the_app} PROPERTIES LINK_FLAGS_DEBUG "/WHOLEARCHIVE:mlfed")
  set_target_properties(${the_app} PROPERTIES LINK_FLAGS_RELEASE "/WHOLEARCHIVE:mlfe")
elseif(UNIX AND NOT APPLE)
  target_link_libraries(${the_app} -Wl,--whole-archive mlfe)
elseif(APPLE)
  target_link_libraries(${the_app} -Wl,-force_load mlfe)
else()
  message("No support platform.")
endif()
set_target_properties(${the_app} PROPERTIES FOLDER "apps")
