set(the_app tensor_example)
include_directories(${mlfe_include_dirs})
add_executable(${the_app} tensor_example.cpp)
if(MSVC)
  set_target_properties(${the_app} PROPERTIES LINK_FLAGS_DEBUG "/WHOLEARCHIVE:mlfed")
  set_target_properties(${the_app} PROPERTIES LINK_FLAGS_RELEASE "/WHOLEARCHIVE:mlfe")
elseif(UNIX AND NOT APPLE)
  target_link_libraries(${the_app} -Wl,--whole-archive mlfe)
elseif(APPLE)
  target_link_libraries(${the_app} -Wl,-force_load mlfe)
else()
  message("No support platform.")
endif()
set_target_properties(${the_app} PROPERTIES FOLDER "apps")
