set(the_app train_exmaples)
include_directories(${mlfe_include_dirs} ${OpenCV_INCLUDE_DIRS})
file(GLOB train_examples_srcs "*.cpp")
file(GLOB train_examples_hdrs "*.hpp")
add_executable(${the_app} ${train_examples_srcs} ${train_examples_hdrs})
if(MSVC)
  target_link_libraries(${the_app} mlfe ${OpenCV_LIBS})
  set_target_properties(${the_app} PROPERTIES LINK_FLAGS_DEBUG /WHOLEARCHIVE:mlfed)
  set_target_properties(${the_app} PROPERTIES LINK_FLAGS_RELEASE /WHOLEARCHIVE:mlfe)
elseif(UNIX AND NOT APPLE)
  target_link_libraries(${the_app} -Wl,--whole-archive mlfe -Wl,--no-whole-archive ${OpenCV_LIBS})
elseif(APPLE)
  target_link_libraries(${the_app} -Wl,-force_load mlfe ${OpenCV_LIBS})
else()
  message("No support platform.")
endif()
set_target_properties(${the_app} PROPERTIES FOLDER "apps")
