set(the_app cifar_example)
file(GLOB_RECURSE files "*.*")
mlfe_group_files("${files}")
include_directories(${mlfe_include_dirs})
file(GLOB_RECURSE cifar_example_srcs "*.cc")
file(GLOB_RECURSE cifar_example_hdrs "*.h")
add_executable(${the_app} ${cifar_example_srcs} ${cifar_example_hdrs})
if(MSVC)
    target_link_libraries(${the_app} mlfe)
    set_target_properties(${the_app} PROPERTIES LINK_FLAGS_DEBUG "/WHOLEARCHIVE:mlfed")
    set_target_properties(${the_app} PROPERTIES LINK_FLAGS_RELEASE "/WHOLEARCHIVE:mlfe")
elseif(UNIX AND NOT APPLE)
    target_link_libraries(${the_app} -Wl,--whole-archive mlfe -Wl,--no-whole-archive)
elseif(APPLE)
    target_link_libraries(${the_app} -Wl,-force_load mlfe)
else()
    message("No support platform.")
endif()
set_target_properties(${the_app} PROPERTIES FOLDER "example")
